--- a/index.html
+++ b/index.html
@@ -16,34 +16,23 @@
         .overlay { background: rgba(255, 255, 255, 0.85); backdrop-filter: blur(12px); }
         .circle-num {
             display: inline-flex; align-items: center; justify-content: center;
-            width: 34px; height: 34px; border-radius: 50%; border: 2.5px solid;
+            width: 34px; height: 34px; border-radius: 50%; border: 2px solid;
             font-weight: bold; margin-right: 12px;
         }
-        /* 이미지 컨테이너: 모바일 최적화 및 스크롤 */
         .img-container {
-            width: 100%;
-            max-height: 60vh;
-            overflow: auto;
-            border: 1px solid #e5e7eb;
-            border-radius: 0.75rem;
-            background-color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 1.5rem;
+            width: 100%; max-height: 60vh; overflow: auto;
+            border: 1px solid #e5e7eb; border-radius: 0.75rem;
+            background-color: white; display: flex; justify-content: center; align-items: center; margin-bottom: 1.5rem;
         }
-        .img-container img {
-            max-width: 100%; /* 화면 너비에 맞춤 */
-            height: auto;    /* 비율 유지 */
-            display: block;
-        }
+        .img-container img { max-width: 100%; height: auto; display: block; }
+        .timer-badge { background: #fee2e2; color: #ef4444; border: 1px solid #fecaca; }
     </style>
 </head>
 <body class="bg-gray-100 min-h-screen">
     <div id="root"></div>
 
     <script type="text/babel">
-        const { useState, useEffect } = React;
+        const { useState, useEffect, useRef } = React;
 
         function App() {
             const [authorized, setAuthorized] = useState(false);
@@ -52,14 +41,32 @@
             const [currentIndex, setCurrentIndex] = useState(0);
             const [userAnswers, setUserAnswers] = useState({});
             const [examHistory, setExamHistory] = useState([]);
+            
+            // --- 타이머 관련 상태 ---
+            const [timeLeft, setTimeLeft] = useState(1800); // 30분 (1800초)
+            const [timerActive, setTimerActive] = useState(false);
+            const [finalTimeTaken, setFinalTimeTaken] = useState(0);
 
             useEffect(() => {
                 const pw = prompt("접속 비밀번호를 입력하세요.");
                 if (pw === "1234") setAuthorized(true);
                 else { alert("비밀번호가 틀렸습니다."); window.location.reload(); }
-                const saved = localStorage.getItem('cbt_history_final_v4');
+                const saved = localStorage.getItem('cbt_history_v5'); // 버전 업데이트
                 if (saved) setExamHistory(JSON.parse(saved));
             }, []);
+
+            // 타이머 로직
+            useEffect(() => {
+                let timer = null;
+                if (timerActive && timeLeft > 0) {
+                    timer = setInterval(() => {
+                        setTimeLeft(prev => prev - 1);
+                    }, 1000);
+                } else if (timeLeft === 0 && timerActive) {
+                    submitExam(); // 시간 초과 시 자동 제출
+                }
+                return () => clearInterval(timer);
+            }, [timerActive, timeLeft]);
 
             useEffect(() => {
                 const renderMath = () => {
@@ -75,20 +82,23 @@
                                 }
                             } catch (e) {}
                         });
-                    } else {
-                        setTimeout(renderMath, 100);
-                    }
+                    } else { setTimeout(renderMath, 100); }
                 };
                 const timer = setTimeout(renderMath, 100);
                 return () => clearTimeout(timer);
             }, [view, currentIndex, examQuestions]);
+
+            const formatTime = (seconds) => {
+                const m = Math.floor(seconds / 60);
+                const s = seconds % 60;
+                return `${String(m).padStart(2, '0')}:${String(s).padStart(2, '0')}`;
+            };
 
             const startExam = () => {
                 const shuffle = (arr) => [...arr].sort(() => Math.random() - 0.5);
                 const poolA = allQuestions.filter(q => q.type === 'A');
                 const poolB = allQuestions.filter(q => q.type === 'B');
                 const poolC = allQuestions.filter(q => q.type === 'C');
-
                 const countA = Math.min(poolA.length, Math.floor(Math.random() * 3) + 8);
                 const countC = Math.min(poolC.length, Math.floor(Math.random() * 4) + 2);
                 const countB = 20 - countA - countC;
@@ -113,37 +123,72 @@
                 setExamQuestions(randomized);
                 setUserAnswers({});
                 setCurrentIndex(0);
+                setTimeLeft(1800); // 시간 초기화
+                setTimerActive(true);
                 setView('play');
             };
 
             const submitExam = () => {
+                setTimerActive(false);
+                const timeTaken = 1800 - timeLeft;
+                setFinalTimeTaken(timeTaken);
+
                 const correctCount = examQuestions.reduce((acc, q, idx) => acc + (userAnswers[idx] === q.answer ? 1 : 0), 0);
                 const score = correctCount * 5;
-                const newRecord = { date: new Date().toLocaleString(), score };
+                
+                // --- 확장된 기록 저장 ---
+                const newRecord = {
+                    id: Date.now(),
+                    date: new Date().toLocaleString(),
+                    score,
+                    questions: examQuestions, // 문제 세트 저장
+                    answers: userAnswers,     // 사용자 답안 저장
+                    timeTaken: timeTaken      // 걸린 시간 저장
+                };
+
                 const updated = [newRecord, ...examHistory];
                 setExamHistory(updated);
-                localStorage.setItem('cbt_history_final_v4', JSON.stringify(updated));
+                localStorage.setItem('cbt_history_v5', JSON.stringify(updated));
                 setView('result');
+            };
+
+            // 기록 확인에서 결과보기
+            const viewPastResult = (record) => {
+                setExamQuestions(record.questions);
+                setUserAnswers(record.answers);
+                setFinalTimeTaken(record.timeTaken);
+                setView('result');
+            };
+
+            // 기록 확인에서 재응시
+            const retakeExam = (record) => {
+                setExamQuestions(record.questions); // 같은 문제 세트 사용
+                setUserAnswers({});
+                setCurrentIndex(0);
+                setTimeLeft(1800);
+                setTimerActive(true);
+                setView('play');
             };
 
             if (!authorized) return null;
 
             if (view === 'home') return (
-                <div class="flex flex-col items-center justify-center min-h-screen gap-6">
+                <div class="flex flex-col items-center justify-center min-h-screen gap-6 p-6">
                     <h1 class="text-3xl font-black text-blue-900 mb-4">전기공사기사 CBT</h1>
-                    <button onClick={() => setView('ready')} class="w-80 py-12 bg-blue-600 text-white text-2xl font-bold rounded-2xl shadow-xl hover:scale-105 transition">공사기사 문제풀기</button>
-                    <div class="flex gap-4">
-                        <button class="w-38 px-6 py-6 bg-gray-700 text-white rounded-xl shadow-md font-bold">파트별 공부</button>
-                        <button onClick={() => setView('history')} class="w-38 px-6 py-6 bg-gray-700 text-white rounded-xl shadow-md font-bold">응시 기록</button>
+                    <button onClick={() => setView('ready')} class="w-full max-w-sm py-12 bg-blue-600 text-white text-2xl font-bold rounded-2xl shadow-xl hover:scale-105 transition">공사기사 문제풀기</button>
+                    <div class="flex gap-4 w-full max-w-sm">
+                        <button class="flex-1 py-6 bg-gray-700 text-white rounded-xl shadow-md font-bold">파트별 공부</button>
+                        <button onClick={() => setView('history')} class="flex-1 py-6 bg-gray-700 text-white rounded-xl shadow-md font-bold">응시 기록</button>
                     </div>
                 </div>
             );
 
             if (view === 'ready') return (
                 <div class="relative min-h-screen flex items-center justify-center overlay">
-                    <div class="bg-white p-12 rounded-3xl shadow-2xl text-center border-4 border-blue-100">
-                        <h2 class="text-2xl font-bold mb-8">응시를 시작하시겠습니까?</h2>
-                        <button onClick={startExam} class="px-16 py-5 bg-black text-white text-xl font-bold rounded-xl hover:bg-gray-800 shadow-lg">응시하기</button>
+                    <div class="bg-white p-10 rounded-3xl shadow-2xl text-center border-4 border-blue-50 max-w-sm w-full mx-6">
+                        <h2 class="text-2xl font-bold mb-4">응시 안내</h2>
+                        <p class="text-gray-500 mb-8 text-sm">제한 시간: 30분 (20문항)<br/>70점 이상 합격</p>
+                        <button onClick={startExam} class="w-full py-5 bg-black text-white text-xl font-bold rounded-xl hover:bg-gray-800 transition">응시 시작</button>
                     </div>
                 </div>
             );
@@ -151,13 +196,20 @@
             if (view === 'play') {
                 const q = examQuestions[currentIndex];
                 return (
-                    <div class="max-w-3xl mx-auto py-10 px-6">
+                    <div class="max-w-3xl mx-auto py-6 px-4">
+                        {/* 헤더: 타이머 고정 */}
+                        <div class="flex justify-between items-center mb-6 bg-white p-4 rounded-xl shadow-sm sticky top-2 z-50">
+                            <span class="font-bold text-gray-400 text-sm">문제 {currentIndex + 1} / 20</span>
+                            <span class={`px-4 py-1 rounded-full font-mono font-bold text-lg timer-badge`}>
+                                {formatTime(timeLeft)}
+                            </span>
+                        </div>
+
                         <div class="bg-white rounded-2xl shadow-lg p-8">
-                            <div class="text-sm text-gray-400 mb-2 font-bold">문제 {currentIndex + 1} / 20</div>
                             <div class="math-render text-xl font-bold mb-6" data-text={q.question}>{q.question}</div>
                             {q.hasImage && (
                                 <div class="img-container mb-8">
-                                    <img src={`images/q${q.id}.png`} alt={`문제 ${q.id} 이미지`} onError={(e) => e.target.style.display='none'} />
+                                    <img src={`images/q${q.id}.png`} alt="이미지" onError={(e) => e.target.style.display='none'} />
                                 </div>
                             )}
                             <div class="space-y-4">
@@ -170,10 +222,10 @@
                                 ))}
                             </div>
                             <div class="flex justify-between mt-12 border-t pt-8">
-                                {currentIndex > 0 && <button onClick={() => setCurrentIndex(currentIndex - 1)} class="px-8 py-3 bg-gray-200 rounded-lg font-bold">이전</button>}
+                                {currentIndex > 0 && <button onClick={() => setCurrentIndex(currentIndex - 1)} class="px-6 py-3 bg-gray-200 rounded-lg font-bold text-sm">이전</button>}
                                 <div class="flex-1"></div>
-                                {currentIndex < 19 ? <button onClick={() => setCurrentIndex(currentIndex + 1)} class="px-8 py-3 bg-blue-600 text-white rounded-lg font-bold">다음</button> :
-                                <button onClick={submitExam} class="px-10 py-3 bg-red-600 text-white rounded-lg font-bold">제출</button>}
+                                {currentIndex < 19 ? <button onClick={() => setCurrentIndex(currentIndex + 1)} class="px-8 py-3 bg-blue-600 text-white rounded-lg font-bold text-sm">다음</button> :
+                                <button onClick={submitExam} class="px-10 py-3 bg-red-600 text-white rounded-lg font-bold text-sm">제출하기</button>}
                             </div>
                         </div>
                     </div>
@@ -184,11 +236,12 @@
                 const score = examQuestions.reduce((acc, q, idx) => acc + (userAnswers[idx] === q.answer ? 5 : 0), 0);
                 const isPass = score >= 70;
                 return (
-                    <div class="max-w-4xl mx-auto py-10 px-6">
+                    <div class="max-w-4xl mx-auto py-10 px-4">
                         <div class={`bg-white rounded-2xl shadow p-10 mb-8 text-center border-t-8 ${isPass ? 'border-green-500' : 'border-red-500'}`}>
-                            <h1 class="text-3xl font-black mb-2"><span class={isPass ? 'text-green-600' : 'text-red-600'}>{score}점</span></h1>
-                            <div class={`text-xl font-bold mb-6 ${isPass ? 'text-green-500' : 'text-red-500'}`}>{isPass ? '합격입니다! 🎉' : '불합격입니다. (70점 기준)'}</div>
-                            <button onClick={() => setView('home')} class="px-8 py-3 bg-black text-white rounded-xl font-bold">홈으로 돌아가기</button>
+                            <h1 class="text-4xl font-black mb-2"><span class={isPass ? 'text-green-600' : 'text-red-600'}>{score}점</span></h1>
+                            <div class="text-gray-500 font-bold mb-4 italic text-sm">소요 시간: {formatTime(finalTimeTaken)}</div>
+                            <div class={`text-xl font-bold mb-8 ${isPass ? 'text-green-500' : 'text-red-500'}`}>{isPass ? '축하합니다! 합격입니다. 🎉' : '불합격입니다. (70점 기준)'}</div>
+                            <button onClick={() => setView('home')} class="px-10 py-3 bg-black text-white rounded-xl font-bold">홈으로</button>
                         </div>
                         <div class="space-y-8">
                             {examQuestions.map((q, idx) => {
@@ -198,7 +251,6 @@
                                         <div class="flex items-start mb-6">
                                             <span class={`circle-num ${isCorrect ? 'border-green-500 text-green-500' : 'border-red-500 text-red-500'}`}>{idx + 1}</span>
                                             <div class="flex-1">
-                                                {/* 파트명 옆에 유형(A, B, C)을 추가로 표시 */}
                                                 <div class="text-xs text-blue-600 font-bold mb-1">[{q.partName}] [유형: {q.type}]</div>
                                                 <div class="math-render text-lg font-bold" data-text={q.question}>{q.question}</div>
                                             </div>
@@ -212,9 +264,9 @@
                                                 return <div key={i} class={`p-4 border-2 rounded-lg ${st}`}><span class="math-render" data-text={`${i+1}. ${opt}`}>{i+1}. {opt}</span></div>;
                                             })}
                                         </div>
-                                        <div class="bg-blue-50 p-6 rounded-xl text-blue-800 border border-blue-100">
-                                            <div class="font-bold mb-1 text-blue-900">💡 해설</div>
-                                            <div class="math-render text-sm" data-text={q.explanation}>{q.explanation}</div>
+                                        <div class="bg-blue-50 p-6 rounded-xl text-blue-800 border border-blue-100 text-sm">
+                                            <div class="font-bold mb-1 text-blue-900">해설</div>
+                                            <div class="math-render" data-text={q.explanation}>{q.explanation}</div>
                                         </div>
                                     </div>
                                 );
@@ -225,18 +277,32 @@
             }
 
             if (view === 'history') return (
-                <div class="max-w-lg mx-auto py-20 px-6">
-                    <div class="bg-white rounded-2xl shadow p-8 text-center">
-                        <h2 class="text-2xl font-bold mb-6 border-b pb-4">최근 응시 내역</h2>
-                        {examHistory.length === 0 ? <p class="text-gray-400 py-10">기록이 없습니다.</p> : 
-                            examHistory.map((rec, i) => (
-                                <div key={i} class="flex justify-between items-center p-4 border-b">
-                                    <span class="text-sm text-gray-400">{rec.date}</span>
-                                    <span class={`font-bold ${rec.score >= 70 ? 'text-green-600' : 'text-red-600'}`}>{rec.score}점</span>
-                                </div>
-                            ))
+                <div class="max-w-2xl mx-auto py-10 px-4">
+                    <div class="bg-white rounded-2xl shadow p-8">
+                        <h2 class="text-2xl font-bold mb-8 border-b pb-4">응시 내역</h2>
+                        {examHistory.length === 0 ? <p class="text-gray-400 py-20 text-center">기록이 없습니다.</p> : 
+                            <div class="space-y-6">
+                                {examHistory.map((rec, i) => (
+                                    <div key={rec.id} class="p-5 border-2 rounded-2xl bg-gray-50">
+                                        <div class="flex justify-between items-start mb-4">
+                                            <div>
+                                                <div class="text-xs text-gray-400 mb-1">{rec.date}</div>
+                                                <div class={`text-2xl font-black ${rec.score >= 70 ? 'text-green-600' : 'text-red-600'}`}>{rec.score}점</div>
+                                                <div class="text-xs font-bold text-gray-500 mt-1 italic">시간: {formatTime(rec.timeTaken)}</div>
+                                            </div>
+                                            <div class={`px-3 py-1 rounded-full text-xs font-bold ${rec.score >= 70 ? 'bg-green-100 text-green-700' : 'bg-red-100 text-red-700'}`}>
+                                                {rec.score >= 70 ? '합격' : '불합격'}
+                                            </div>
+                                        </div>
+                                        <div class="flex gap-2">
+                                            <button onClick={() => viewPastResult(rec)} class="flex-1 py-3 bg-white border border-gray-300 rounded-lg font-bold text-xs hover:bg-gray-100 transition">결과보기</button>
+                                            <button onClick={() => retakeExam(rec)} class="flex-1 py-3 bg-blue-600 text-white rounded-lg font-bold text-xs hover:bg-blue-700 transition">재응시하기</button>
+                                        </div>
+                                    </div>
+                                ))}
+                            </div>
                         }
-                        <button onClick={() => setView('home')} class="mt-8 w-full py-4 bg-gray-800 text-white rounded-xl font-bold">홈으로 가기</button>
+                        <button onClick={() => setView('home')} class="mt-10 w-full py-4 bg-gray-800 text-white rounded-xl font-bold">홈으로 가기</button>
                     </div>
                 </div>
             );
